--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p id="para">Entered Metaverse</p>
+		<button id="click"  onclick="buttonClick()">cliick</button>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
