--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<p id="para">Entered Metaverse</p>
-		<button id="click"  onclick="buttonClick()">cliick</button>
+		<p id="status">Entered Metaverse</p>
+		<button id="enterBtn"  onclick="buttonClick()">cliick</button>
 	</div>
 	
     <script type="text/javascript" src="./script.js">
