--- a/main.html
+++ b/main.html
@@ -9,11 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<p id="status">Entered Metaverse</p>
+		<p id="status">Enter the Metaverse</p>
 		<button id="enterBtn"  onclick="buttonClick()">cliick</button>
 	</div>
 	
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
